--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,37 @@
 :root {
     --color-share:  #4bc800;
     --color-meeting: #991b0f;
-    --color-primary :#000000;
+    --color-back :#000000;
     --color-primary: #FFFFFF;
 }
+body {
+    background-color: var(--color-back);
+    color: var(--color-primary);
+    }
 
 .container {
     width: 100%;
-    margin: 0 auto;
-    height: 100vh;
+    padding: 50px 50px 0 50px;
+    height: calc(100vh - 120px);
+
+}
+.d-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.box {
+    width: calc(100vw / 7 - 45px);
+    height: calc(100vh / 7);
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 5px;
+    
+}
+img {
+    width: 100%;
+    height: 100%;
+}
+footer {
+    height: 70px;
 }
