--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body {
 
 .container {
     width: 100%;
-    height: calc(100vh - 120px);
-    padding-top: 30px;
+    height: calc(100vh - 175px);
+    padding: 30px;
 
 }
 .d-flex {
@@ -30,13 +30,14 @@ body {
 }
 .box {
     width: calc(100vw / 7 - 45px);
-    height: calc(100vh / 4);
-x
-    
+    height: calc(100vh / 4 -175px);  
+    margin-top: 20px;
+    margin-right: 5px;
 }
 img {
     width: 100%;
     height: 100%;
+    padding: 5px;
 }
 footer {
     height: 120px;
