--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,22 @@
     --color-meeting: #991b0f;
     --color-back :#000000;
     --color-primary: #FFFFFF;
+    --color-back-meet: #424242;
 }
 body {
-    background-color: var(--color-primary);
-   }
+    background-color: var(--color-back);
+    color: var(--color-primary);
 
+   }
+main {
+    position: relative;
+
+}
 .container {
     width: 100%;
-    height: calc(100vh - 175px);
+    height: calc(100vh - 50px);
     padding: 30px;
+
 
 }
 .d-flex {
@@ -28,20 +35,98 @@ body {
     align-content: center;
 }
 .box {
-    width: calc(100vw / 7 - 45px);
-    height: calc(100vh / 4 -175px);  
-    margin-top: 20px;
-    margin-right: 5px;
+    width: calc(100vw / 7 - 30px);
+    height: calc(100vh / 4 -30px);  
+    margin-top: 5px;
+    margin-right: 2px;
+    position: relative;
+    ;
 }
 img {
     width: 100%;
     height: 100%;
-    padding: 5px;
+    padding: 2px;
 }
+
+.pinco-pallo {
+    position:absolute;
+    bottom: 5px;
+    left:0;
+    font-size: 0.8em;
+    background-color: rgba(94, 102, 112, 0.5);
+}
+
+.item-up {
+    position: absolute;
+    top: 0;
+    right: 30px;
+    color: var(--color-primary);
+    background-color: rgba(94, 102, 112, 0.5);
+    font-size: 0.7em;
+}
+.exit {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: var(--color-primary);
+    background-color: rgba(94, 102, 112, 0.5);
+    font-size: 0.7em;
+    margin-left: 2px;
+}
+/* Footer */
 footer {
-    height: 120px;
+    height: 50px;
     width: 100%;
+    background-color: var(--color-back);
 }
-/* .fa-solid {
-    color: #000000;
-} */
+ .fa-solid {
+    color: var(--color-primary);
+    font-size: 1.3em;
+    padding: 5px;
+} 
+.item-start {;
+    width: 25%;
+}
+.item-center {
+    width: 40%;
+   margin-right: 200px;
+}
+.f-flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: flex-start;
+}
+h6 {
+    color: #B8B1AD;
+} 
+.f-star {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.f-center {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+.fa-chevron-up {
+    font-size: 0.5em;
+    padding-left: 20px;
+}
+h5 {
+color: var(--color-meeting);
+line-height: 35px;
+}
+.fa-share-from-square {
+    color: var(--color-share);
+}
+.center {
+    text-align: center;
+}
+.meeting {
+    background-color:var(--color-back-meet)
+}
