--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,15 @@ main {
 }
 .box {
     width: calc(100vw / 7 - 30px);
-    height: calc(100vh / 4 -30px);  
+    height: calc(100vh / 5 - 40px);  
     margin-top: 5px;
-    margin-right: 2px;
-    position: relative;
-    ;
+   margin-top: 10px;
+    margin-bottom: 5px;
 }
+.card-box {
+    position: relative;
+}
+
 img {
     width: 100%;
     height: 100%;
@@ -50,7 +53,7 @@ img {
 
 .pinco-pallo {
     position:absolute;
-    bottom: 5px;
+    bottom: 10px;
     left:0;
     font-size: 0.8em;
     background-color: rgba(94, 102, 112, 0.5);
@@ -75,18 +78,18 @@ img {
 }
 /* Footer */
 footer {
-    height: 50px;
+    height: 20px;
     width: 100%;
     background-color: var(--color-back);
 }
  .fa-solid {
     color: var(--color-primary);
     font-size: 1.3em;
-    padding: 5px;
 } 
-.item-start {;
+.item-start {
     width: 25%;
 }
+
 .item-center {
     width: 40%;
    margin-right: 200px;
@@ -97,6 +100,7 @@ footer {
     justify-content: space-between;
     align-content: flex-start;
 }
+
 h6 {
     color: #B8B1AD;
 } 
